--- a/src/components/PlaceCard/PlaceCard.scss
+++ b/src/components/PlaceCard/PlaceCard.scss
@@ -9,6 +9,11 @@
 	border-radius: $element-radius;
 	border: $element-border;
 
+	&--highlighted{
+		border: 3px solid aquamarine;
+	}
+	
+
 	@include desktop {
 		width: 25rem;
 	}
@@ -65,19 +70,14 @@
 		width: 40%;
 	}
 
-	&__rating-icons-wrapper {
-		display: flex;
-	}
-
 	&__photo {
-		width: 22rem;
+		width: 100%;
 		height: 10rem;
 		object-fit: cover;
 		border-top-left-radius: $element-radius;
 		border-top-right-radius: $element-radius;
 
 		@include desktop {
-			width: 25rem;
 			height: 15rem;
 		}
 
@@ -107,10 +107,6 @@
 		@include desktop {
 			width: 1.6rem;
 		}
-	}
-
-	&__rating-icon {
-		width: 1.4rem;
 	}
 
 	&__info {
