--- a/src/components/ControlMenuGroup/ControlMenuGroup.scss
+++ b/src/components/ControlMenuGroup/ControlMenuGroup.scss
@@ -21,6 +21,7 @@
 		flex-direction: column;
 		align-items: center;
 		row-gap: $mobile-row-gap;
+		padding: $mobile-row-gap;
 	}
 
 	&__home-button {
