--- a/src/components/MapMarkerCurrent/MapMarkerCurrent.scss
+++ b/src/components/MapMarkerCurrent/MapMarkerCurrent.scss
@@ -4,20 +4,49 @@
 	&__wave {
 		width: 2rem;
 		height: 2rem;
-		border: 2px solid red;
+		border: 2px solid rgba(24, 171, 24, 0.556);
 		position: absolute;
 		top: 0;
 		border-radius: 50%;
-        left: -1rem;
+		left: -1rem;
 	}
 
 	&__dot {
 		width: 2rem;
 		height: 2rem;
-		background-color: red;
+		background-color: rgb(24, 171, 24);
 		border-radius: 50%;
 		position: absolute;
 		top: 0;
-        left: -1rem;
+		left: -1rem;
+	}
+
+	&__compass {
+		height: 5rem;
+		width: 10rem;
+		overflow: hidden;
+		position: absolute;
+		top: -4rem;
+		left: -5rem;
+
+		transform: rotate(calc(var(--compass) - 60deg));
+		transform-origin: 50% 100%;
+
+		&:before {
+			height: inherit;
+			width: inherit;
+			position: absolute;
+			content: "";
+			border-radius: 5rem 5rem 0 0;
+			background-color: rgba(0, 128, 0, 0.2);
+			-webkit-transform-origin: 50% 100%;
+			-moz-transform-origin: 50% 100%;
+			-ms-transform-origin: 50% 100%;
+			transform-origin: 50% 100%;
+			-webkit-transform: rotate(120deg);
+			-moz-transform: rotate(120deg);
+			-ms-transform: rotate(120deg);
+			transform: rotate(120deg);
+		}
 	}
 }
