Adjust map styling

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -55,7 +55,7 @@
 			@include desktop {
 				font-size: 1.8rem;
 				text-decoration: none;
-				margin: 1.5rem 2rem 1.5rem 0.8rem;
+				margin: 1.5rem 2rem;
 			}
 		}
 	}
