Disable route search bottom when no filled search query or is currently loading a query

--- a/src/components/RouteSubmitButton/RouteSubmitButton.scss
+++ b/src/components/RouteSubmitButton/RouteSubmitButton.scss
@@ -13,4 +13,16 @@
 		background-color: $primary-cta-button-color;
 		color: $primary-text-light-color;
 	}
+
+	&--disabled{
+		background-color: gray;
+		color: $primary-text-light-color;
+		border:unset;
+
+		&:hover {
+			background-color:gray;
+			color: $primary-text-light-color;
+			cursor: not-allowed;
+		}
+	}
 }
