--- a/src/styles/partials/_reset.scss
+++ b/src/styles/partials/_reset.scss
@@ -13,6 +13,8 @@ html {
 body {
 	font-size: 1.4rem;
 	margin: 0;
+	height: 100%;
+	overflow: hidden;
 }
 
 // Page Header
@@ -55,7 +57,6 @@ a:visited {
 	color: inherit;
 }
 
-
 button {
 	background-color: transparent;
 	border: none;
@@ -63,11 +64,11 @@ button {
 	cursor: pointer;
 }
 
-.aria-description{
+.aria-description {
 	position: absolute;
 	padding: 0;
 	margin: -1px;
-	clip: rect(0,0,0,0);
+	clip: rect(0, 0, 0, 0);
 	border: 0;
 	overflow: hidden;
 	height: 1px;
