--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -10,6 +10,67 @@
 		flex-direction: row-reverse;
 	}
 
+	&__loading {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 10rem;
+		height: 10rem;
+
+		&-spinner {
+			border: 1.5rem solid rgb(27, 202, 27);
+			border-top: 1.5rem solid rgb(146, 233, 146);
+			border-radius: 50%;
+			animation: spinner 1.5s linear infinite;
+			width: 100%;
+			height: 100%;
+		}
+
+		&-icon {
+			fill: green;
+			animation: bouncer 1.5s ease-out infinite;
+			width: 100%;
+			height: 100%;
+
+			&-wrapper {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				width: 5rem;
+				height: 5rem;
+			}
+		}
+	}
+
+	@keyframes spinner {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
+	}
+
+	@keyframes bouncer {
+		0% {
+			transform: translateY(0rem) translateX(1rem);
+		}
+		25% {
+			transform: translateY(0rem) translateX(-.5rem);
+		}
+		50% {
+			transform: translateY(-.5rem) translateX(.3rem);
+		}
+		75% {
+			transform: translateY(-1rem) translateX(.5rem);
+		}
+		100% {
+			transform: translateY(-.5rem) translateX(.9rem);
+		}
+	}
+
 	&__desktop-right-wrapper {
 		height: 94vh;
 		width: 100vw;
@@ -31,8 +92,8 @@
 		}
 	}
 
-	&__route-wrapper{
-		@include desktop{
+	&__route-wrapper {
+		@include desktop {
 			position: fixed;
 			right: 2rem;
 			bottom: 2rem;
