--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -5,9 +5,11 @@
 	position: fixed;
 	top: 50%;
 	left: 50%;
-	width: 40rem;
+	width:80vw;
+	max-width: 40rem;
 	padding: 2rem;
 	transform: translate(-50%, -50%);
+	z-index: 1001;
 
 	background-color: $primary-panel-background-color;
 	@include element-shadow;
@@ -44,5 +46,12 @@
 		font-weight: bold;
 		padding: 1rem;
 		border-radius: $element-radius;
+	}
+
+	&__bottom-wrapper{
+		display: flex;
+		flex-direction:column;
+		row-gap: 1rem;
+		width: 100%;
 	}
 }
