Adjust map camrea angle for navigation mode

--- a/src/components/MapMarkerCompass/MapMarkerCompass.scss
+++ b/src/components/MapMarkerCompass/MapMarkerCompass.scss
@@ -6,7 +6,7 @@
     top: -4rem;
     left: -5rem;
 
-    transform: rotateZ(-60deg) rotateY(var(--angle)) rotateX(30deg);
+    transform: rotateZ(-50deg) rotateY(30deg) rotateX(30deg);
     transform-origin: 50% 100%;
 
     &:before {
