Adjust the distance to trigger next destination direction in navigation mode

--- a/src/components/DirectionInfoBox/DirectionInfoBox.scss
+++ b/src/components/DirectionInfoBox/DirectionInfoBox.scss
@@ -42,7 +42,7 @@
 		width: 2.5rem;
 		height: 2.5rem;
 		position: absolute;
-		left: calc(var(--distance) - 2.5rem);
+		left: var(--distance);
 		bottom: 0;
 	}
 
